Update by timtim:

--- a/light.html
+++ b/light.html
@@ -1,6 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <button> hava a nice day</button>
-    </body>
+<body>
+
+
+
+<p id="deemo"></p>
+<p id="deemo1"></p>
+<h4 id="deemo2"></h4>
+
+<script>
+    const person = {
+        name: "John",
+        age: 30,
+        city: "New York"
+    };
+
+    document.getElementById("deemo").innerHTML=person["age"];
+//     class Car{
+
+//         constructor(na, ye){
+//             this.name = na;
+//             this.year = ye;
+//         }
+//         printLove(){
+//         // console.log("timtim");
+//             return "timtim";
+//         }
+//         sumTwoNumber(a, b){
+//             // console.log(a+b);
+//             return a+b;
+//         }
+//     }
+
+//     const car1 = new Car("BMW", 2018);
+// // console.log("Car name: " +car1.name+"\n"+ "Model year: "+car1.year);
+//     // const car1 = new Car();
+//     // car1.sumTwoNumber(3, 5);
+//     // console.log("I Love this lady"+ car1.printLove());
+//     // console.log(car1.printLove());
+//     let sum = car1.sumTwoNumber(3, 5);
+//     // let sum = 10+6;
+
+//     document.getElementById("deemo").innerHTML = car1.name;
+//     document.getElementById("deemo1").innerHTML = car1.printLove();
+//     document.getElementById("deemo2").innerHTML = sum;
+</script>
+
+
+</body>
 </html>
+
+
